# fbx_analyzer

./: .gitignore  README.md  __init__.py  cli.py  models.py  pyproject.toml
core/: __init__.py  analyzer.py  sdk.py  traversal.py
docs/: save_as_feature.md
fbx_analyzer/: __main__.py  cli.py  models.py  utils.py
fbx_analyzer/core/: exceptions.py  save_as.py  sdk.py  validation.py
fbx_analyzer/gui/: __init__.py  app.py
fbx_analyzer/inspectors/: __init__.py  metadata.py  scene_graph.py  skeleton.py
gui/: dialogs.py
inspectors/: scene_graph.py  top_level.py
